load("@rules_python//python:defs.bzl", "py_binary")
load(":worker.bzl", "concat")

py_binary(
    name = "persistent_worker",
    srcs = ["concat.py"],
    main = "concat.py",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

concat(
    name = "concat",
    out = "output.txt",
    chunks = [
        "README.md",
        "concat.py",
    ],
)
